pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-same-ref.ub
factory: {
  state-moves: [
    { from: resource.same, to: resource.same }
  ]
}
